    people have a system that can run host binaries).
  * Dh_Lib.pm: Fix bug where `addsubstvars` would not respect
    the `--no-act` parameter.
  * dh_perl: For scripts that are detected as perl scripts
    that would trigger a dependency, normalize the shebang line to
    use the same perl as debhelper is run under (/usr/bin/perl
    in Debian, YMMV in derivatives).  (Closes: #904409)

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #1019231)

 -- Niels Thykier <niels@thykier.net>  Mon, 03 Oct 2022 06:02:58 +0000

debhelper (13.9.1) unstable; urgency=medium

  [ Niels Thykier ]
  * autoscripts/postinst-init-tmpfiles: Re-instate runtime check
    before running `systemd-tmpfiles`. However, explicitly check
    for `systemd-tmpfiles` rather than asserting the system was
    booted by systemd. This resolves #1013969 without requiring
    a strict dependency as originally suggested by Guilhem Moulin
    in #1013969.
  * dh_installtmpfiles: Remove the `systemd | systemd-tmpfiles`
    dependency as it is no longer required.  (Closes: #1017441)
  * dh_installsystemd: Ditto.
  * dh_installinit: Ditto.

  [ Johannes Schauer Marin Rodrigues ]
  * autoscripts/postinst-init-tmpfiles: Only pass `--root` to systemd
    when `DPKG_ROOT` is present (as `--root=/` is different from
    omitting `--root` entirely).
  * autoscripts/postinst-sysusers: Ditto

 -- Niels Thykier <niels@thykier.net>  Tue, 30 Aug 2022 15:24:43 +0000

debhelper (13.9) unstable; urgency=medium

  [ Gioele Barabucci ]
  * d/control: Provide dh-sequence-installsysusers.

  [ Andreas Hübner ]
  * debhelper.pod: Add missing word "variables".

  [ Niels Thykier ]
  * Dh_Lib.pm: Fix in addsubstvar where a value was added when
    it should not have been.  (Closes: #1015263)

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2022 12:34:54 +0000

debhelper (13.8) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_perl: Fix incorrect binary versioning caused by a regression