@@ -57,6 +57,11 @@ debhelper (13.10) UNRELEASED; urgency=medium
     that would trigger a dependency, normalize the shebang line to
     use the same perl as debhelper is run under (/usr/bin/perl
     in Debian, YMMV in derivatives).  (Closes: #904409)
+  * dh_assistant: Provide new `log-installed-files` command to
+    help users and third-party tools record which files they have
+    installed.  Third-party tools should use the
+    `--on-behalf-of-cmd` to have their tool name recorded.
+    (Closes: #972724)
 
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
